@@ -49,6 +49,9 @@ Bugs fixed
 
 - Added "charset=UTF-8" to the XML header and "Content-Transfer-Encoding=binary"
   to binary header inside input stream MIME documents 
+  
+- Removed the deprecated, never-used gd:contactSection support
+
 
 Release 1.3.0
 5-December-2007
